--- a/responsive.css
+++ b/responsive.css
@@ -234,6 +234,16 @@
       margin-left: auto;
       margin-right: auto;
       margin-top: 20px;
+  } 
+
+  .excerpt {    
+      padding-top: 50px;
+      font-size: 35px;
+      width: auto;
+  } 
+
+  .excerpt-img {    
+      width: 80%;
   }
 
 
@@ -400,9 +410,27 @@
     .text-info {    
         font-size: 20px;
         width: 90%;
+    }   
+
+    .excerpt {  
+        font-size: 20px;
+        padding-top: 20px;
+        line-height: 20px;
     }
 
-    
+    .excerpt-text { 
+        width: auto;
+        margin-top: 10px;
+        font-size: 16px;
+    }   
+
+    .excerpt-img {  
+        height: auto;
+    }   
+
+    .btn-excerpt {  
+        width: 100%;
+    }
 
 }   
 
